--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <ul>
-  <li><a href=""></a></li>
+  <li><a href="http://niisar.github.io/Angular2/EventBinding/" target="_blank">Event Binding</a></li>
 </ul>
 </body>
 </html>
