--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <body>
 <ul>
 <li><a href="http://niisar.github.io/Angular2/EventBinding/" target="_blank">Event Binding</a></li>
+<li><a href="http://niisar.github.io/Angular2/NestingComponent/" target="_blank">Nesting Component</a></li>
+<li><a href="http://niisar.github.io/Angular2/AtInput/" target="_blank">@input to flow data parent to child</a></li>
+<li><a href="http://niisar.github.io/Angular2/Input/" target="_blank">input to flow data parent to child</a></li>
+<li><a href="http://niisar.github.io/Angular2/AtOutput/" target="_blank">@output to flow data child to parent</a></li>
+<li><a href="http://niisar.github.io/Angular2/Output/" target="_blank">output to flow data child to parent</a></li>
 </ul>
 </body>
 </html>
