--- a/EventBinding/index.html
+++ b/EventBinding/index.html
@@ -2,17 +2,16 @@
 <html>
 
   <head>
+    <base href="." />
     <title>angular2 playground</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
-    <script src="https://code.angularjs.org/tools/system.js"></script>
-    <script src="https://code.angularjs.org/tools/typescript.js"></script>
+    <script src="https://unpkg.com/zone.js/dist/zone.js"></script>
+    <script src="https://unpkg.com/zone.js/dist/long-stack-trace-zone.js"></script>
+    <script src="https://unpkg.com/reflect-metadata@0.1.3/Reflect.js"></script>
+    <script src="https://unpkg.com/systemjs@0.19.31/dist/system.js"></script>
     <script src="config.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.0/Rx.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.0/angular2.min.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.0/http.min.js"></script>
     <script>
-    System.import('app/main')
+    System.import('app')
       .catch(console.error.bind(console));
   </script>
   </head>
