upgrading angular version

--- a/EventBinding/index.html
+++ b/EventBinding/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <base href="." />
-    <title>angular2 playground</title>
+    <title>Angular2 Event Binding</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/zone.js/dist/zone.js"></script>
     <script src="https://unpkg.com/zone.js/dist/long-stack-trace-zone.js"></script>
