--- a/AtInput/index.html
+++ b/AtInput/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>input to flow data parent to child</title>
-    <script src="https://code.angularjs.org/2.0.0-beta.8/angular2-polyfills.js"></script>
-    <script src="https://code.angularjs.org/tools/system.js"></script>
-    <script src="https://code.angularjs.org/tools/typescript.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.8/Rx.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.8/angular2.dev.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.8/http.dev.js"></script>
+<head>
+  <title>input to flow data parent to child</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://unpkg.com/zone.js/dist/zone.js"></script>
+  <script src="https://unpkg.com/zone.js/dist/long-stack-trace-zone.js"></script>
+  <script src="https://unpkg.com/reflect-metadata@0.1.3/Reflect.js"></script>
+  <script src="https://unpkg.com/systemjs@0.19.31/dist/system.js"></script>
+  <script src="config.js"></script>
   <script>
-    System.config({
-      transpiler: 'typescript',
-      typescriptOptions:{emitDecoratorMetaData:true},
-      packages:{
-        'api':{defaultExtension:'ts'},
-        'app':{defaultExtension:'ts'}
-      }
-    });
-    System.import('app/main')
+     System.import('app')
+      .catch(console.error.bind(console));
       .then(null,console.error.bind(console));
   </script>
-  <style>
-  *{
-    font-family: sans-serif;
-  }
-</style>
-  </head>
+</head>
 
-  <body>
-    <story-app>
+<body>
+  <story-app>
     loading...
-    </story-app>
-  </body>
+  </story-app>
+</body>
 
 </html>
