--- a/AtInput/index.html
+++ b/AtInput/index.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/systemjs@0.19.31/dist/system.js"></script>
   <script src="config.js"></script>
   <script>
-     System.import('app/parent.component')
+     System.import('parent.component')
       .catch(console.error.bind(console));
   </script>
 </head>
